--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
             margin: 0 auto;
         }
         img {
-            max-width: 100%;
+            width: 200;
             height: auto;
             border-radius: 10px;
             margin: 20px 0;
+            display: block; /* This centers the image if it's smaller than the text width */
+            margin-left: auto;
+            margin-right: auto;
         }
     </style>
 </head>
