Adding a button to the pandemics game

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             margin: 0 auto;
         }
         img {
-            width: 200;
+            width: 200px;
             height: auto;
             border-radius: 10px;
             margin: 20px 0;
@@ -23,6 +23,24 @@
             margin-left: auto;
             margin-right: auto;
         }
+        .button {
+            display: inline-block;
+            padding: 10px 20px;
+            font-size: 18px;
+            cursor: pointer;
+                    text-decoration: none;
+            outline: none;
+            color: #fff;
+            background-color: #4CAF50;
+            border: none;
+            border-radius: 15px;
+            box-shadow: 0 9px #999;
+            transition: all 0.3s ease;
+        }
+        .button:hover {backgr        .button:active {
+            background-color: #3e8e41;
+            box-shadow: 0 5px #666;
+            transform: translateY(4px);
     </style>
 </head>
 <body>
@@ -33,5 +51,8 @@
     <img src="https://images.squarespace-cdn.com/content/v1/62e963d482ab8b12168f0ad4/b947acd6-971a-4713-a3b8-c690c38acc3c/BlueDotImpact_Oct2023_By_DataImages_013.jpg?format=1500w" alt="A picture of me" />
     
     <p>Hope you have a great day!</p>
+
+    <a href="https://dewierwan.github.io/pandemics/" class="button">Play Pandemics Game</a>
+
 </body>
 </html>
