Add new pandemics game

--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
     
     <p>Hope you have a great day!</p>
 
-    <a href="https://dewierwan.github.io/pandemics/" class="button">Play Pandemics Game</a>
+    <a href="https://dewierwan.github.io/simple-pandemics/" class="button">Play Pandemics Game</a>
+
+    <a href="https://dewierwan.github.io/pandemic-response/" class="button">Play another Pandemics Game</a>
+
 
 </body>
 </html>
