--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'San Francisco', 'Helvetica Neue', sans-serif;
-            background-color: cream;
+            background-color: #FFFDD0;
             color: #333;
             line-height: 1.6;
             padding: 20px;
@@ -37,10 +37,14 @@
             box-shadow: 0 9px #999;
             transition: all 0.3s ease;
         }
-        .button:hover {backgr        .button:active {
+        .button:hover {
+            background-color: #45a049;
+        }
+        .button:active {
             background-color: #3e8e41;
             box-shadow: 0 5px #666;
             transform: translateY(4px);
+        }
     </style>
 </head>
 <body>
