--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     
     <p>Hope you have a great day!</p>
 
-    <a href="https://dewierwan.github.io/simple-pandemics/" class="button">Play Pandemics Game</a>
+    <a href="https://dewierwan.github.io/simple-pandemic/" class="button">Play Pandemics Game</a>
 
     <a href="https://dewierwan.github.io/pandemic-response/" class="button">Play another Pandemics Game</a>
 
