--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
     
     <p>Hope you have a great day!</p>
 
-    <a href="https://dewierwan.github.io/simple-pandemic/" class="button">Play Pandemics Game</a>
+    <a href="https://dewierwan.github.io/simple-simulation/" class="button">See a simple Pandemic simulation</a>
 
-    <a href="https://dewierwan.github.io/pandemic-response/" class="button">Play another Pandemics Game</a>
+    <a href="https://dewierwan.github.io/pandemic-bolt/" class="button">Play a Pandemics Game</a>
 
 
 </body>
