fix: correct image filename

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     
     <p>This is my github page. I'm playing around with this to learn html, CSS, javascript, and how to make nice websites. Welcome!</p>
     
-    <img src="profile.jpg" alt="A picture of me" />
+    <img src="dewi.jpg" alt="A picture of me" />
 
     <h2>Done</h2>
     <ul>
