--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
     <h1>Welcome to My GitHub Page</h1>
     
-    <p>This is my github page. I'm playing around with this to learn html, CSS, javascript, and how to make nice websites. Welcome!</p>
+    <p>This is my github page. I'm playing around with this to learn how to build web apps. Welcome!</p>
     
     <img src="dewi.jpg" alt="A picture of me" />
 
