adding AI risk quotes

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <h2>Done</h2>
     <ul>
         <li><a href="https://dewierwan.github.io/airtable-to-markdown/" target="_blank" rel="noopener noreferrer">Airtable to Markdown</a></li>
+        <li><a href="https://dewierwan.github.io/ai-concern-quotes/" target="_blank" rel="noopener noreferrer">Quotes about AI risks</a></li>
     </ul>
 
     <h2>Work in Progress</h2>
